# MVA-BML

./: .gitignore  README.md  pyproject.toml  requirements.txt
deliverables/: bibliography.bib  presentation.tex  report.tex
deliverables/presentation/: bibliography.bib  presentation.tex  presentationv2.tex  presentationv3.tex
deliverables/report/: bibliography.bib  neurips_2024.sty  neurips_2024.tex  report.tex
notebooks/: 1. MVN.ipynb  1. Multivariate Normal.ipynb  1a. Multivariate Normal.ipynb  1b. Bayesian Logistic Regression.ipynb  1c. Hierarchical Logistic Regression.ipynb  1d. Stochastic Volatility.ipynb  2. Bayesian Logistic Regression.ipynb  2. Discrepancies.ipynb  3. Hierarchical Logistic Regression.ipynb  3. Multimodal Stress Test.ipynb  4. Dense Correlation Test.ipynb  5. Neal's Funnel.ipynb
results/: discrepancies.csv
results/LR/: DANUTS_delta.csv
results/MVN/: DANUTS_delta.csv
src/bml/: main.py  metrics.py
src/bml/distributions/: bnn.py  counter.py  funnel.py  gpc.py  hlr.py  lr.py  mvn.py  sv.py
src/bml/samplers/: hmc.py  nuts.py
src/samplers/: hmc.py  nuts.py  utils.py
