[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mva-bml"
version = "0.1.0"
description = "Bayesian Machine Learning"
authors = [{ name = "Adonis JAMAL, Jean-Vincent MARTINI" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
